# cpp-course-project-repository-template

./: .gitignore  CMakeLists.txt  Meeting-notes.md  README.md  valg
src/: Item.hpp  Itemm.cpp  README.md  dungeon.cpp  dungeon.hpp  game.cpp  game.hpp  gameOverScreen.cpp  gameOverScreen.hpp  helper.hpp  inventory.cpp  inventory.hpp  item.cpp  main.cpp  room.cpp  room.hpp  tempp.cpp  test.cpp  textureManager.hpp  textures.hpp  ui.cpp  ui.hpp
src/Character/: Character.h  Creature.cpp  Creature.hpp
src/Creature/: Assassin.cpp  Assassin.hpp  Creature.cpp  Creature.hpp  Enemy.hpp  GameCharacter.cpp  GameCharacter.hpp  Player.hpp
src/Test/: test.cpp  test.hpp
